Initial setup of html and css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,49 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <link href="master.css" rel="stylesheet" type="text/css"/>
+        <title>e-Sport Center</title>
+    </head>
+    <body>
+        <header>
+            <img> <ul><li></li><li></li><li></li><li></li></ul> <img>
+        </header>
+        <div id="slider">
+            <div id="slidercontrolscontainer">
+                <ul><li class="sliderbutton"></li><li class="sliderbutton"></li><li class="sliderbutton"></li><li class="sliderbutton"></li></ul>
+            </div>
+        </div>
+        <div id="topbar">
+            <h1></h1>
+            <p></p>
+        </div>
+        <div id="toptiles">
+            <div id="lefttoptile">
+                <h2></h2>
+                <p></p>
+                <button></button>
+                <img>
+            </div>
+            <div id="righttoptile">
+                <h2></h2>
+            </div>
+        </div>
+        <div id="middlecontainer">
 
-  </body>
+        </div>
+        <div id="bottomcontainer">
+
+        </div>
+        <div id="videocontainer">
+
+        </div>
+        <div id="mailcontainer">
+
+        </div>
+        <footer>
+
+        </footer>
+        <script></script>
+    </body>
 </html>
