Nav almost done

--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <link href="master.css" rel="stylesheet" type="text/css"/>
+        <link href="assets/css/master.css" rel="stylesheet" type="text/css"/>
         <title>e-Sport Center</title>
     </head>
     <body>
         <header>
-            <img> <ul><li></li><li></li><li></li><li></li></ul> <img>
+            <nav>
+                <ul class="navUl">
+                    <li class="navLi" id="navLogo"><img></li>
+                    <li class="navLi"><a>Home</a></li>
+                    <li class="navLi"><a>SportsCenter</a></li>
+                    <li class="navLi"><a>Food And Party</a></li>
+                    <li class="navLi"><a>Vacation</a></li>
+                </ul> 
+            </nav>
+            <ul id="breadcrumbs">
+                <li class="breadcrumbLi"><a>SportsCenter</a></li>
+                <li class="breadcrumbLi"><a>E-Sport</a></li>
+            </ul>
         </header>
+        
         <div id="slider">
             <div id="slidercontrolscontainer">
                 <ul><li class="sliderbutton"></li><li class="sliderbutton"></li><li class="sliderbutton"></li><li class="sliderbutton"></li></ul>
