--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
         <header>
             <nav>
                 <ul class="navUl">
-                    <li class="navLi" id="navLogo"><img></li>
+                    <li class="navLi" id="navLogo"><img src="assets/Img/LOGO/sportspark-blaavandshuk-logo_1.png" alt="SportsPark Blaavandshuk logo"></li>
                     <li class="navLi"><a>Home</a></li>
                     <li class="navLi"><a>SportsCenter</a></li>
                     <li class="navLi"><a>Food And Party</a></li>
                     <li class="navLi"><a>Vacation</a></li>
+                    <li class="navLi" id="navLanguage"><img src="assets/Img/sportspark-blaavandshuk-dansk-flag.png" alt="SportsPark blaavandshuk på dansk"><p>Change language</p></li>
                 </ul> 
             </nav>
             <ul id="breadcrumbs">
