--- a/index.html
+++ b/index.html
@@ -56,7 +56,26 @@
 
         </div>
         <footer>
-
+            <div id="sponsor-line">
+                <img>
+                <img>
+                <img>
+            </div>
+            <div id="info-line">
+                <p></p>
+                <p>SportsPark Blaavandshuk<br>SportsCenter (HeadQ)<br>Strandvejen 2, 6840  Oksbøl<br>Tlf. 70 22 16 53 - tast 1<br>Info@SportsPark.dk</p>
+                <p>SportsPark Blaavandshuk<br>GolfCenter i Ho<br>Søndertoften 29, 6857  Blåvand<br>Tlf. 70 22 16 53 - tast 2<br>Golf@SportsPark.dk</p>
+                <p>SportsPark Blaavandshuk<br>FitnessCenter Blaavand<br>Blaavandvej 21, 6857  Blåvand<br>Tlf. 70 22 16 53 - tast 1 + 2<br>Info@SportsPark.dk</p>
+                <p>SportsPark Blaavandshuk<br>FitnessCenter Vejers<br>Vejers Havvej 58b, 6853  Vejers<br>Tlf. 70 22 16 53 - tast 1 + 2<br>Info@SportsPark.dk</p>
+                <p></p>
+            </div>
+            <div id="social-media-line">
+                <img>
+                <img>
+                <img>
+                <img>
+                <p>Copyright 2018 Sportspark.dk. All rights reserved.</p>
+            </div>
         </footer>
         <script></script>
     </body>
