--- a/index.html
+++ b/index.html
@@ -11,7 +11,16 @@
                 <ul class="navUl">
                     <li class="navLi" id="navLogo"><img src="assets/Img/LOGO/sportspark-blaavandshuk-logo_1.png" alt="SportsPark Blaavandshuk logo"></li>
                     <li class="navLi"><a>Home</a></li>
-                    <li class="navLi"><a>SportsCenter</a></li>
+                    <li class="dropdown navLi">
+                        <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+                        <div class="dropdown-content">
+                          <a href="#">Link 1</a>
+                          <a href="#">Link 2</a>
+                          <a href="#">Link 3</a>
+                        </div>
+                    </li>
+                    
+                    
                     <li class="navLi"><a>Food And Party</a></li>
                     <li class="navLi"><a>Vacation</a></li>
                     <li class="navLi" id="navLanguage"><img src="assets/Img/sportspark-blaavandshuk-dansk-flag.png" alt="SportsPark blaavandshuk på dansk"><p>Change language</p></li>
