--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
                     <li class="navLi" id="navLogo"><img src="assets/Img/LOGO/sportspark-blaavandshuk-logo_1.png" alt="SportsPark Blaavandshuk logo"></li>
                     <li class="navLi"><a>Home</a></li>
                     <li class="dropdown navLi">
-                        <a href="javascript:void(0)" class="dropbtn">Dropdown</a>
+                        <a>SportsPark</a>
                         <div class="dropdown-content">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
+                           <a href="#">Water Park</a>
+                           <a href="#">Fitness center</a>
+                           <a href="#">Sports Hall</a>
+                           <a href="#">E-Sport</a> 
                         </div>
                     </li>
                     
