--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div id="bottomcontainer">
             <div><img><img><img><img><img><img></div>
-            <div><h2>For schools</h2><p>We offer bootcamps for schools that would be interested in having their students experience a place where they can train playing games on high-end computers, but also enjoy the other facilities such as an aquapark, fitnesscenter and the nature.</p><button>Contact Page</button></div>
+            <div><h2>For schools</h2><p>We offer bootcamps for schools that would be interested in having their students experience a place where they can train playing games on high-end computers, but also enjoy the other facilities such as an aquapark, fitnesscenter and the nature.</p><a href="#">Contact Page</a></div>
         </div>
         <div id="videocontainer">
 
