--- a/index.html
+++ b/index.html
@@ -57,8 +57,15 @@
 
         </div>
         <div id="bottomcontainer">
-            <div><img><img><img><img><img><img></div>
-            <div><h2>For schools</h2><p>We offer bootcamps for schools that would be interested in having their students experience a place where they can train playing games on high-end computers, but also enjoy the other facilities such as an aquapark, fitnesscenter and the nature.</p><a href="#">Contact Page</a></div>
+            <div class="school">
+                <div class="school-img">
+                    <img src="assets/Img/school/kitchen.png"><img src="assets/Img/school/E-Sport.png">
+                </div>
+                <div class="school-img">
+                    <img src="assets/Img/school/kitchen.png"><img src="assets/Img/school/E-Sport.png">
+                </div>
+            </div>
+            <div class="school"><h2>For schools</h2><p>We offer bootcamps for schools that would be interested in having their students experience a place where they can train playing games on high-end computers, but also enjoy the other facilities such as an aquapark, fitnesscenter and the nature.</p><a href="#">Contact Page</a></div>
         </div>
         <div id="videocontainer">
 
@@ -68,9 +75,9 @@
         </div>
         <footer>
             <div id="sponsor-line">
-                <img>
-                <img>
-                <img>
+                <img src="assets/Img/footer/Viinaturensortlogosrcsetlarge_srcset-large.png">
+                <img src="assets/Img/footer/2018storKlovnesponsor80x30_srcset-large.png">
+                <img src="assets/Img/footer/Naturparkvesterhavetlogo_srcset-large.jpg">
             </div>
             <div id="info-line">
                 <p></p>
