--- a/bootcamp.html
+++ b/bootcamp.html
@@ -53,12 +53,12 @@
                 </div>
             </div>
             <div id="calendercontainer">
-
+                
             </div>
             <footer>
 
             </footer>
             <script></script>
-            <body>
-            </body>
+        </div>
+    </body>
 </html>
