newsletter almost done
>added a text field
>added a button
>added js to the button

--- a/index.html
+++ b/index.html
@@ -77,6 +77,11 @@
         <div id="mailcontainer">
           <div class="mail-box">
             <img class="mail-box-background "src="assets/Img/newsletter-background.png" alt="background">
+            <h1 class="newsletter-header">Newsletter</h1>
+            <div>
+             <input class="email-input" placeholder="Input your e-mail...">
+             <button id="subscribe-button" text-swap="Subscribed">Subscribe</button>
+            </div>
           </div>
         </div>
 
@@ -102,6 +107,6 @@
                 <p>Copyright 2018 Sportspark.dk. All rights reserved.</p>
             </div>
         </footer>
-        <script></script>
+        <script src="assets/js/main.js"></script>
     </body>
 </html>
