budget half done

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -45,17 +45,19 @@
                 </div>
             </div>
             <div id="budget">
-                <img class="budget-background "src="assets/Img/budget-background.png" alt="background">
-                <div class="budget-prices"><h2>Budget</h2><p>With the budget price for 6 or less players you get all above mentioned perks, but will have to share the E-Sport room with other eventual players. </div>
+                <!-- <img class="budget-background "src="assets/Img/budget-background.png" alt="background"> -->
+                <div id="budget-prices">
+                  <br><h2>Budget</h2><br><p>With the budget price for</p> <p class="text-highlight">6 or less players</p><p> you get all above mentioned perks, but will have to share the E-Sport room with other eventual players.</p><br></div>
 
-                </div>
-                <div class="deluxe-prices"><h2>Deluxe</h2><p>By purchasing the Deluxe deal you have the entire room for yourselves and it doesn't matter whether you are 2 or 12 players. </div>
+                <div id="deluxe-prices">
+                  <br><h2 class="white-font">Deluxe</h2><br><p>By purchasing the Deluxe deal you have the entire room for yourselves and it doesn't matter whether you are 2 or 12 players.</p></div>
             </div>
             <div id="pricebox">
-                <div id="priceleft">
+                <div id="pricebox-prices">
+                  <br><h2>Prices</h2>
 
                 </div>
-                <div id="priceright">
+                <div id="pricebox-deals">
 
                 </div>
             </div>
