budget almost done

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -47,10 +47,10 @@
             <div id="budget">
                 <!-- <img class="budget-background "src="assets/Img/budget-background.png" alt="background"> -->
                 <div id="budget-prices">
-                  <br><h2>Budget</h2><br><p>With the budget price for</p> <p class="text-highlight">6 or less players</p><p> you get all above mentioned perks, but will have to share the E-Sport room with other eventual players.</p><br></div>
+                  <br><h2>Budget</h2><br><p>With the budget price for</p> <p style="color:#FFAA00;">6 or less players</p><p> you get all above mentioned perks, but will have to share the E-Sport room with other eventual players.</p><br></div>
 
                 <div id="deluxe-prices">
-                  <br><h2 class="white-font">Deluxe</h2><br><p>By purchasing the Deluxe deal you have the entire room for yourselves and it doesn't matter whether you are 2 or 12 players.</p></div>
+                  <br><h2>Deluxe</h2><br><p>By purchasing the Deluxe deal you have the entire room for yourselves and it doesn't matter whether you are 2 or 12 players.</p></div>
             </div>
             <div id="pricebox">
                 <div id="pricebox-prices">
