--- a/bootcamp.html
+++ b/bootcamp.html
@@ -7,8 +7,32 @@
     </head>
     <body>
         <header>
-            <img> <ul><li></li><li></li><li></li><li></li></ul> <img>
+            <nav>
+                <ul class="navUl">
+                    <li class="navLi" id="navLogo"><img src="assets/Img/LOGO/sportspark-blaavandshuk-logo_1.png" alt="SportsPark Blaavandshuk logo"></li>
+                    <li class="navLi"><a>Home</a></li>
+                    <li class="dropdown navLi">
+                        <a>SportsPark</a>
+                        <div class="dropdown-content">
+                           <a href="#">Water Park</a>
+                           <a href="#">Fitness center</a>
+                           <a href="#">Sports Hall</a>
+                           <a href="#">E-Sport</a>
+                        </div>
+                    </li>
+
+
+                    <li class="navLi"><a>Food And Party</a></li>
+                    <li class="navLi"><a>Vacation</a></li>
+                    <li class="navLi" id="navLanguage"><img src="assets/Img/sportspark-blaavandshuk-dansk-flag.png" alt="SportsPark blaavandshuk på dansk"><p>Change language</p></li>
+                </ul>
+            </nav>
+            <ul id="breadcrumbs">
+                <li class="breadcrumbLi"><a>SportsCenter</a></li>
+                <li class="breadcrumbLi"><a>E-Sport</a></li>
+            </ul>
         </header>
+        
         <div id="topimagecontainer"></div>
         <div id="topbluebar"></div>
         <div id="toptiles">
@@ -84,18 +108,19 @@
             </div>
             <div id="calendercontainer">
                 <div id="Calendar">
+                    <h2>Booking E-Sport room</h2>
                     <div id="cal-month"><p>Jan</p><p>Feb</p><p>Mar</p><p>Apr</p><p>Maj</p><p>Jun</p><p>Jul</p><p>Aug</p><p>Sep</p><p>Okt</p><p>Nov</p><p>Dec</p><p>2018</p><p>2019</p></div>
-                    <div id="cal-days"><p class="grey">Monday</p><p class="white">Tuesday</p><p class="grey">Wendsday</p><p class="white">Thursday</p><p class="grey">Friday</p><p class="white">Saturday</p><p class="grey">Sunday</p></div>
+                    <div id="cal-dayname"><p class="grey">Monday</p><p class="white">Tuesday</p><p class="grey">Wendsday</p><p class="white">Thursday</p><p class="grey">Friday</p><p class="white">Saturday</p><p class="grey">Sunday</p></div>
 
-                    <div id="cal-days"><p class="grey">31</p><p class="white">1</p><p class="grey">2</p><p class="white">3</p><p class="grey">4</p><p class="white">5</p><p class="grey">6</p></div>
+                    <div id="cal-days"><p class="grey offmonth pastdays">31</p><p class="white pastdays">1</p><p class="grey pastdays">2</p><p class="white pastdays">3</p><p class="grey pastdays">4</p><p class="white pastdays">5</p><p class="grey pastdays">6</p></div>
 
-                    <div id="cal-days"><p class="grey">7</p><p class="white">8</p><p class="grey">9</p><p class="white">10</p><p class="grey">11</p><p class="white">12</p><p class="grey">13</p></div>
+                    <div id="cal-days"><p class="grey pastdays">7</p><p class="white pastdays">8</p><p class="grey currentday">9</p><p class="white">10</p><p class="grey">11</p><p class="white">12</p><p class="grey">13</p></div>
 
                     <div id="cal-days"><p class="grey">14</p><p class="white">15</p><p class="grey">16</p><p class="white">17</p><p class="grey">18</p><p class="white">19</p><p class="grey">20</p></div>
 
                     <div id="cal-days"><p class="grey">21</p><p class="white">22</p><p class="grey">23</p><p class="white">24</p><p class="grey">25</p><p class="white">26</p><p class="grey">27</p></div>
 
-                    <div id="cal-days"><p class="grey">28</p><p class="white">29</p><p class="grey">30</p><p class="white">31</p><p class="grey">1</p><p class="white">2</p><p class="grey">3</p></div>
+                    <div id="cal-days"><p class="grey">28</p><p class="white">29</p><p class="grey">30</p><p class="white">31</p><p class="grey offmonth">1</p><p class="white offmonth">2</p><p class="grey offmonth">3</p></div>
                 </div>
             </div>
             <footer>
