calender almost done

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -135,20 +135,42 @@
                     <div id="cal-month"><p>Jan</p><p>Feb</p><p>Mar</p><p>Apr</p><p>Maj</p><p>Jun</p><p>Jul</p><p>Aug</p><p>Sep</p><p>Okt</p><p>Nov</p><p>Dec</p><p>2018</p><p>2019</p></div>
                     <div id="cal-dayname"><p class="grey">Monday</p><p class="white">Tuesday</p><p class="grey">Wendsday</p><p class="white">Thursday</p><p class="grey">Friday</p><p class="white">Saturday</p><p class="grey">Sunday</p></div>
 
-                    <div id="cal-days"><p class="grey offmonth pastdays">31</p><p class="white pastdays">1</p><p class="grey pastdays">2</p><p class="white pastdays">3</p><p class="grey pastdays">4</p><p class="white pastdays">5</p><p class="grey pastdays">6</p></div>
+                    <div class="cal-days"><p class="grey offmonth pastdays">31</p><p class="white pastdays">1</p><p class="grey pastdays">2</p><p class="white pastdays">3</p><p class="grey pastdays">4</p><p class="white pastdays">5</p><p class="grey pastdays">6</p></div>
 
-                    <div id="cal-days"><p class="grey pastdays">7</p><p class="white pastdays">8</p><p class="grey currentday">9</p><p class="white">10</p><p class="grey">11</p><p class="white">12</p><p class="grey">13</p></div>
+                    <div class="cal-days"><p class="grey pastdays">7</p><p class="white pastdays">8</p><p class="grey currentday">9</p><p class="white">10</p><p class="grey">11</p><p class="white">12</p><p class="grey">13</p></div>
 
-                    <div id="cal-days"><p class="grey">14</p><p class="white">15</p><p class="grey">16</p><p class="white">17</p><p class="grey">18</p><p class="white">19</p><p class="grey">20</p></div>
+                    <div class="cal-days"><p class="grey">14</p><p class="white">15</p><p class="grey">16</p><p class="white">17</p><p class="grey">18</p><p class="white">19</p><p class="grey">20</p></div>
 
-                    <div id="cal-days"><p class="grey">21</p><p class="white">22</p><p class="grey">23</p><p class="white">24</p><p class="grey">25</p><p class="white">26</p><p class="grey">27</p></div>
+                    <div class="cal-days"><p class="grey">21</p><p class="white">22</p><p class="grey">23</p><p class="white">24</p><p class="grey">25</p><p class="white">26</p><p class="grey">27</p></div>
 
-                    <div id="cal-days"><p class="grey">28</p><p class="white">29</p><p class="grey">30</p><p class="white">31</p><p class="grey offmonth">1</p><p class="white offmonth">2</p><p class="grey offmonth">3</p></div>
+                    <div class="cal-days"><p class="grey">28</p><p class="white">29</p><p class="grey">30</p><p class="white">31</p><p class="grey offmonth">1</p><p class="white offmonth">2</p><p class="grey offmonth">3</p></div>
+                    
+                    <div id="booking"><p> </p><p> </p><p> </p><p> </p><p> </p><p> </p><p class="bookingbutton">Book now</p></div>
                 </div>
             </div>
+            
             <footer>
-
-            </footer>
+            <div id="sponsor-line">
+                <img src="assets/Img/footer/Viinaturensortlogosrcsetlarge_srcset-large.png">
+                <img src="assets/Img/footer/2018storKlovnesponsor80x30_srcset-large.png">
+                <img src="assets/Img/footer/Naturparkvesterhavetlogo_srcset-large.jpg">
+            </div>
+            <div id="info-line">
+                <p></p>
+                <p>SportsPark Blaavandshuk<br>SportsCenter (HeadQ)<br>Strandvejen 2, 6840  Oksbøl<br>Tlf. 70 22 16 53 - tast 1<br>Info@SportsPark.dk</p>
+                <p>SportsPark Blaavandshuk<br>GolfCenter i Ho<br>Søndertoften 29, 6857  Blåvand<br>Tlf. 70 22 16 53 - tast 2<br>Golf@SportsPark.dk</p>
+                <p>SportsPark Blaavandshuk<br>FitnessCenter Blaavand<br>Blaavandvej 21, 6857  Blåvand<br>Tlf. 70 22 16 53 - tast 1 + 2<br>Info@SportsPark.dk</p>
+                <p>SportsPark Blaavandshuk<br>FitnessCenter Vejers<br>Vejers Havvej 58b, 6853  Vejers<br>Tlf. 70 22 16 53 - tast 1 + 2<br>Info@SportsPark.dk</p>
+                <p></p>
+            </div>
+            <div id="social-media-line">
+                <img>
+                <img>
+                <img>
+                <img>
+                <p>Copyright 2018 Sportspark.dk. All rights reserved.</p>
+            </div>
+        </footer>
             <script></script>
         </div>
     </body>
