slider almost done
not working definition error main.js line 23 slideCurrent counter math corruption fix to come

--- a/index.html
+++ b/index.html
@@ -32,10 +32,17 @@
                 <li class="breadcrumbLi"><a>E-Sport</a></li>
             </ul>
         </header>
-
         <div id="slider">
+          <ul id="slides">
+              <li class="sliderli visable">1</li>
+              <li class="sliderli">2</li>
+              <li class="sliderli">3</li>
+              <li class="sliderli">4</li>
+              <li class="sliderli">5</li>
+          </ul>
+
             <div id="slidercontrolscontainer">
-                <ul><li class="sliderbutton"></li><li class="sliderbutton"></li><li class="sliderbutton"></li><li class="sliderbutton"></li></ul>
+                <ul><li class="sliderbutton"><button class="slidecontrol" id="next"></button></li><li class="sliderbutton"><button class="slidecontrol" id="pre"></button></li</ul>
             </div>
         </div>
         <div id="topbar">
