--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           </ul>
 
             <div id="slidercontrolscontainer">
-                <ul><li class="sliderbutton"><button class="slidecontrol" id="next"></button></li><li class="sliderbutton"><button class="slidecontrol" id="pre"></button></li</ul>
+                <ul><li class="sliderbutton"><button class="slidecontrol" id="next"></button></li><li class="sliderbutton"><button class="slidecontrol" id="pre"></button></li></ul>
             </div>
         </div>
         <div id="topbar">
