welcome and riptides index done
working on the rest of the top section

--- a/index.html
+++ b/index.html
@@ -46,18 +46,23 @@
             </div>
         </div>
         <div id="topbar">
-            <h1></h1>
-            <p></p>
+            <h1>Welcome</h1>
+            <p>Our E-Sport center is equipped with high quality Shark gaming PC's and 2 PS4's with huge flat screens. The sport facilities are just next door, so you can use them after your gaming sessions.</p>
+            <img src="assets/img/pricecircle.png" alt="circle"/>
         </div>
         <div id="toptiles">
             <div id="lefttoptile">
-                <h2></h2>
+                <img src="assets/img/logoextra.png" alt="wide logo"/>
                 <p></p>
                 <button></button>
                 <img>
             </div>
             <div id="righttoptile">
-                <h2></h2>
+                <h2>Riptides</h2>
+                <p>Team</p>
+                <img src="assets/img/riptideslogo.png" alt="riptides logo"/>
+                <p id="righttoptiletext">Do you want to be a part of a team and learn how to play the games you love on a higher level? Go to our website and become a member of a team, and be trained by one of our expirenced trainers.</p>
+                <button id="riptidesbutton">Go to Riptides</button>
             </div>
         </div>
         <div id="middlecontainer">
