added the video YT link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div id="videocontainer">
           <div class="video-box">
-            <iframe class="video" src="https://www.youtube.com/embed/Qb6ABsTVLG0" allowfullscreen></iframe>
+            <iframe class="video" src="https://www.youtube.com/embed/g2I5fjCzXCY" allowfullscreen></iframe>
           </div>
         </div>
 
