riptides og info tection done

--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
         <div id="toptiles">
             <div id="lefttoptile">
                 <img src="assets/img/logoextra.png" alt="wide logo"/>
-                <p></p>
-                <button></button>
-                <img>
+                <p>Do you want a place to play games with your team or friends? With our high end pc's and peripherals there is no need to bring your own equipment, but if you want to, you naturally can. After your gaming session you can enjoy our waterpark, gym, and more, free of charge.</p>
+                <button>Book bootcamp</button>
             </div>
             <div id="righttoptile">
                 <h2>Riptides</h2>
@@ -65,8 +64,15 @@
                 <button id="riptidesbutton">Go to Riptides</button>
             </div>
         </div>
+        <h1 id="midh1">How does fysical training improve your gaming skills?</h1>
         <div id="middlecontainer">
 
+          <div class="thirtythree"><p>With physical training it is possible to improve your neural pathways and their connections. This will improve your reflexes and reaction time in games.</p>
+            <img src="assets/img/siloutte1.png" alt="siloutte"/></div>
+          <div class="thirtythree"><p>Physical activity and weight lift can prevent pain in neck and shoulders caused by gaming and pc work in general.</p>
+            <img src="assets/img/siloutte2.png" alt="siloutte"/></div>
+          <div class="thirtythree"><p>Regular exercise will improve your memory and help your thinking skills. This will make you a more efficient learner and bring you one step ahead of your competitors.</p>
+            <img src="assets/img/siloutte3.png" alt="siloutte"/></div>
         </div>
         <div id="bottomcontainer">
             <div class="school">
