--- a/bootcamp.html
+++ b/bootcamp.html
@@ -73,7 +73,7 @@
               <p>Do you like E-Sports, but also swimming and fitness? If you do then you came to the right place. We offer a high selection of facilities that you can enjoy 24/7. We have 12 high end computers, 2 PS4's with huge flat screens, an Aquapark, a Fitness center, a tennis court. Take your friends and become a better players while you train and bond together at our many facilities. </p>
                 <div class="bootcamp_intro_booking">
                   <h3>From 250 DKK</h3>
-                  <div><a href="Bootcamp.html" title="GoToBooking" class="booking_button_bootcamp">Go To Booking</a></div>
+                  <div><a href="https://blaavandshuk.halbooking.dk/default.asp?lokale=59" title="GoToBooking" class="booking_button_bootcamp">Go To Booking</a></div>
                 </div>
             </div>
             <div class="tile-container">
