stuff done at school
minor changes to bootcamp

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -50,11 +50,11 @@
                   <h2>E-sport</h2>
                   <p>Play, train, and improve together with your friends.<br>With E-Sport at the heart of this experience our rooms accomedate<br>your entire team for prolonged or hourly sessions. While you're here<br>you may use our high-end equipment entirely to your liking.<br>facility is newly established and everything in it is brand new.<br>If you grow tired of playing<br>on the computers, you can<br>always chill out on the<br>couch with the ps4.</p>
                   <div class="trophy">
-                    <img src="assets/Img/trophy_icon.png" height="203.25" width="277.5" alt="trophy">
+                    <img class="tileimgsmall1" src="assets/Img/trophy_icon.png" alt="trophy">
                   </div>
                 </div>
                 <div class="tile_block2">
-                  <img src="assets/Img/e-sport_pic.png" alt="E-sport Center">
+                  <img class="tileimgbig" src="assets/Img/e-sport_pic.png" alt="E-sport Center">
                   <div class="e-sport_circle">
                     <img src="assets/Img/e-sport_circle.png" height="264" width="264" alt="e-sport_circle">
                   </div>
@@ -65,11 +65,11 @@
                     <h2>Facilities</h2>
                     <p>The SportsPark has a waterpark where you can have fun by using<br> all the attractions there, but also train at the swimming lanes. Aside<br> from that we also have a fitness facility where you can train your<br> body and mind. There are also other facilities such as a tennis court,<br>jumping center, and two large sport<br> halls where you can play<br> anything from football<br> to handball.</p>
                     <div class="swimmer">
-                      <img src="assets/Img/swimming_icon.png" height="174" width="350" alt="swimmer">
+                      <img class="tileimgsmall2" src="assets/Img/swimming_icon.png" alt="swimmer">
                     </div>
                   </div>
                 <div class="facilities_block2">
-                  <img src="assets/Img/facilities_pic.png"  alt="Auqa Land">
+                  <img class="tileimgbig" src="assets/Img/facilities_pic.png"  alt="Auqa Land">
                   <div class="facilities_circle">
                     <img src="assets/Img/facilities_circle.png" height="264" width="264" alt="facilities_circle">
                   </div>
@@ -80,11 +80,11 @@
                   <h2>Cabins and Nature</h2>
                   <p>Spend a night at the newly built cabins after a long day with your<br> friends. The cabins are surrounded by nature, and the beach is only<br>11km away, so you can go there<br> any time you want. There are also<br> bikecycle pathes all around the<br> town.There is a kitchen available for<br>  anyone who rents a cabin.</p>
                   <div class="three">
-                    <img src="assets/Img/three_icon.png" height="282" width="202" alt="three">
+                    <img class="tileimgsmall3" src="assets/Img/three_icon.png" alt="three">
                   </div>
                 </div>
                 <div class="tile_block2">
-                <img src="assets/Img/nature_pic.png" alt="Cabin and Nature">
+                <img class="tileimgbig" src="assets/Img/nature_pic.png" alt="Cabin and Nature">
                 <div class="nature_circle">
                   <img src="assets/Img/nature_circle.png" height="264" width="264" alt="nature_circle">
                 </div>
