added links to index top buttons

--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
             <div id="lefttoptile">
                 <img src="assets/img/logoextra.png" alt="wide logo"/>
                 <p>Do you want a place to play games with your team or friends? With our high end pc's and peripherals there is no need to bring your own equipment, but if you want to, you naturally can. After your gaming session you can enjoy our waterpark, gym, and more, free of charge.</p>
-                <button>Book bootcamp</button>
+                <a href="bootcamp.html"><button>Book bootcamp</button></a>
             </div>
             <div id="righttoptile">
                 <h2>Riptides</h2>
                 <p id="teamp">Team</p>
                 <img src="assets/img/riptideslogo.png" alt="riptides logo"/>
                 <p id="righttoptiletext">Do you want to be a part of a team and learn how to play the games you love on a higher level? Go to our website and become a member of a team, and be trained by one of our expirenced trainers.</p>
-                <button id="riptidesbutton">Go to Riptides</button>
+                <a href="http://www.riptides.dk/"><button id="riptidesbutton">Go to Riptides</button></a>
             </div>
         </div>
         <h1 id="midh1">How does fysical training improve your gaming skills?</h1>
