school section circle foto added

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         </div>
         <div id="bottomcontainer">
             <div class="school">
+              <img id="schoolcircle" src="assets/Img/schoolcircle.png" alt="computer picture"/>
                 <div class="school-img">
                     <img src="assets/Img/school/kitchen.png"><img src="assets/Img/school/E-Sport.png">
                 </div>
