added bootcamp image needs new source

--- a/bootcamp.html
+++ b/bootcamp.html
@@ -35,7 +35,9 @@
             </ul>
         </header>
 
-        <div id="topimagecontainer"></div>
+        <div id="topimagecontainer">
+          <h1>Bootcamp</h1>
+        </div>
         <div id="topbluebar"></div>
 
             <div class="bootcamp_intro">
