--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="SportsPark Blaavandshuks E-Sport facility is a place where you can play games">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="assets/css/master.css" rel="stylesheet" type="text/css"/>
-        <title>e-Sport Center</title>
+        <title>E-Sport Center</title>
+        <link rel="icon" type="image/png" sizes="16x16" href="assets/Img/favicon.ico">
     </head>
     <body>
         <header>
